--- a/client/src/pages/Experience.css
+++ b/client/src/pages/Experience.css
@@ -300,7 +300,7 @@
 
 @media (max-width: 768px) {
   .experience {
-    padding-top: 80px;
+    padding-top: 110px;
   }
   
   .exp-card {
