--- a/client/src/pages/Projects.css
+++ b/client/src/pages/Projects.css
@@ -253,7 +253,7 @@
 
 @media (max-width: 768px) {
   .projects {
-    padding-top: 80px;
+    padding-top: 110px;
   }
   
   .projects-grid {
